change in content

--- a/index.html
+++ b/index.html
@@ -439,12 +439,12 @@ Hero Area
                                     <div class="hero-style1">
                                         <h1 class="hero-title text-white">
                                             <span class="title1" data-ani="slideindown" data-ani-delay="0.3s">
-                                                Top Notch </span>
+                                                A Masterpiece of </span>
                                             <span class="title2" data-ani="slideindown" data-ani-delay="0.4s">
-                                                Living Space </span>
+                                                Business Luxury  </span>
                                         </h1>
-                                        <p class="hero-text text-white" data-ani="slideinup" data-ani-delay="0.5s">Bringing together a team with passion, dedication, and resources to help our clients reach their buying and selling goals. We are with you every step of the way.</p>
-                                        <a href="property.html" class="th-btn btn-mask th-btn-icon" data-ani="slideinup" data-ani-delay="0.6s">Explore Properties</a>
+                                        <p class="hero-text text-white" data-ani="slideinup" data-ani-delay="0.5s">A space where *business meets grandeur, where every detail is curated for excellence, and where only the elite belong. VVIP isn’t just a commercial project; it’s a statement of prestige, an address of power, and an icon of success</p>
+                                        <!-- <a href="property.html" class="th-btn btn-mask th-btn-icon" data-ani="slideinup" data-ani-delay="0.6s">Explore Properties</a> -->
                                     </div>
                                 </div>
                                 <div class="col-lg-4">
@@ -468,12 +468,18 @@ Hero Area
                                     <div class="hero-style1">
                                         <h1 class="hero-title text-white">
                                             <span class="title1" data-ani="slideindown" data-ani-delay="0.3s">
-                                                Discover Your </span>
-                                            <span class="title2" data-ani="slideindown" data-ani-delay="0.4s">
-                                                Flexible Living  </span>
+                                                Where Visionaries Belong </span>
+                                            <!-- <span class="title2" data-ani="slideindown" data-ani-delay="0.4s">
+                                                Flexible Living  </span> -->
                                         </h1>
-                                        <p class="hero-text text-white" data-ani="slideinup" data-ani-delay="0.5s">Bringing together a team with passion, dedication, and resources to help our clients reach their buying and selling goals. We are with you every step of the way.</p>
-                                        <a href="property.html" class="th-btn btn-mask th-btn-icon" data-ani="slideinup" data-ani-delay="0.6s">Explore Properties</a>
+                                        <p class="hero-text text-white" data-ani="slideinup" data-ani-delay="0.5s">Every great empire has an address, and for business leaders, that address is VVIP. Designed for visionaries, industry leaders, and elite entrepreneurs, this ultra-premium business destination redefines commercial excellence with:  
+
+                                        ✔ World-Class Architecture – A symbol of timeless sophistication  
+                                        ✔ Elite Business Spaces – Crafted for high-powered success  
+                                        ✔ Unparalleled Luxury – From grand lobbies to concierge services  
+                                        ✔ Exclusive Networking – A league of business magnates  
+</p>
+                                        <!-- <a href="property.html" class="th-btn btn-mask th-btn-icon" data-ani="slideinup" data-ani-delay="0.6s">Explore Properties</a> -->
                                     </div>
                                 </div>
                                 <div class="col-lg-4">
@@ -497,12 +503,18 @@ Hero Area
                                     <div class="hero-style1">
                                         <h1 class="hero-title text-white">
                                             <span class="title1" data-ani="slideindown" data-ani-delay="0.3s">
-                                                Elevate Lifestyle  </span>
+                                                The Pinnacle of   </span>
                                             <span class="title2" data-ani="slideindown" data-ani-delay="0.4s">
-                                              With VVIP's </span>
+                                              Business Prestige</span>
                                         </h1>
-                                        <p class="hero-text text-white" data-ani="slideinup" data-ani-delay="0.5s">Bringing together a team with passion, dedication, and resources to help our clients reach their buying and selling goals. We are with you every step of the way.</p>
-                                        <a href="property.html" class="th-btn btn-mask th-btn-icon" data-ani="slideinup" data-ani-delay="0.6s">Explore Properties</a>
+                                        <p class="hero-text text-white" data-ani="slideinup" data-ani-delay="0.5s">More than just a workspace, VVIP offers an environment of opulence, ensuring that every meeting, every deal, and every interaction happens in an atmosphere of grandeur.  
+
+                                        Ultra-Premium Office & Retail Spaces  
+                                        5-Star Business Amenities & Concierge Services  
+                                        Grand Drop-Off Foyer & Valet Parking  
+                                        Exclusive Lounge & VIP Business Zones 
+</p>
+                                        <!-- <a href="property.html" class="th-btn btn-mask th-btn-icon" data-ani="slideinup" data-ani-delay="0.6s">Explore Properties</a> -->
                                     </div>
                                 </div>
                                 <div class="col-lg-4">
