more changes in content

--- a/index.html
+++ b/index.html
@@ -706,11 +706,11 @@ Portfolio Area
                         <div class="project-title-wrap1">
                             <div class="title-area mb-40">
                                 <span class="shadow-title">PROJECTS</span>
-                                <h2 class="sec-title text-white">Discover Modern Living At Realar Residence.</h2>
-                                <p class="sec-text text-white mt-15">Residence takes advantage of abundant sunlight by incorporating solar panels into its architecture.</p>
+                                <!-- <h2 class="sec-title text-white">Discover Modern Living At Realar Residence.</h2>
+                                <p class="sec-text text-white mt-15">Residence takes advantage of abundant sunlight by incorporating solar panels into its architecture.</p> -->
                             </div>
                             <div class="btn-wrap">
-                                <a href="property.html" class="th-btn btn-mask th-btn-icon">Explore More</a>
+                                <!-- <a href="property.html" class="th-btn btn-mask th-btn-icon">Explore More</a> -->
                             </div>
                         </div>
                     </div>
@@ -797,7 +797,7 @@ Property Area
                 </div>
                 <div class="col-auto">
                     <div class="sec-btn">
-                        <a href="property.html" class="th-btn btn-mask th-btn-icon">All Properties</a>
+                        <!-- <a href="property.html" class="th-btn btn-mask th-btn-icon">All Properties</a> -->
                     </div>
                 </div>
             </div>
