more changes in content

--- a/index.html
+++ b/index.html
@@ -443,7 +443,7 @@ Hero Area
                                             <span class="title2" data-ani="slideindown" data-ani-delay="0.4s">
                                                 Business Luxury  </span>
                                         </h1>
-                                        <p class="hero-text text-white" data-ani="slideinup" data-ani-delay="0.5s">A space where *business meets grandeur, where every detail is curated for excellence, and where only the elite belong. VVIP isn’t just a commercial project; it’s a statement of prestige, an address of power, and an icon of success</p>
+                                        <p class="hero-text text-white" data-ani="slideinup" data-ani-delay="0.5s">A space where business meets grandeur, where every detail is curated for excellence, and where only the elite belong. VVIP isn’t just a commercial project; it’s a statement of prestige, an address of power, and an icon of success</p>
                                         <!-- <a href="property.html" class="th-btn btn-mask th-btn-icon" data-ani="slideinup" data-ani-delay="0.6s">Explore Properties</a> -->
                                     </div>
                                 </div>
@@ -552,19 +552,19 @@ Counter Area
                 <div class="counter-card">
                     <div class="media-body">
                         <h2 class="box-number"><span class="counter-number">850</span>+</h2>
-                        <p class="box-text">ELEGANT APARTMENTS</p>
+                        <p class="box-text">ELEGANT OFFICE</p>
                     </div>
                 </div>
                 <div class="counter-card">
                     <div class="media-body">
                         <h2 class="box-number"><span class="counter-number">950</span>+</h2>
-                        <p class="box-text">LUXURY HOUSES</p>
+                        <p class="box-text">LUXURY SPACES</p>
                     </div>
                 </div>
                 <div class="counter-card">
                     <div class="media-body">
                         <h2 class="box-number"><span class="counter-number">18</span>k+</h2>
-                        <p class="box-text">SATISFIED GUESTS</p>
+                        <p class="box-text">SATISFIED CLIENTS</p>
                     </div>
                 </div>
                 <div class="counter-card">
@@ -646,8 +646,8 @@ Service Area
                             </div>
                         </div>
                         <div class="box-content">
-                            <h3 class="box-title"><a href="property-details.html">Property Valuation</a></h3>
-                            <p class="box-text">All-inclusive real estate services to facilitate the easy and confident purchase, sale, and management of your properties.</p>
+                            <h3 class="box-title"><a href="property-details.html">A Masterpiece of Business Luxury</a></h3>
+                            <p class="box-text">High-Speed Connectivity & Smart Office Solutions – Designed for efficiency and excellence.</p>
                         </div>
                     </div>
                 </div>
@@ -659,8 +659,8 @@ Service Area
                             </div>
                         </div>
                         <div class="box-content">
-                            <h3 class="box-title"><a href="property-details.html">Property Management</a></h3>
-                            <p class="box-text">Business consulting involves providing expert advice and services to real estate improve performance services and achieve.</p>
+                            <h3 class="box-title"><a href="property-details.html">Designed for the Discerning Few</a></h3>
+                            <p class="box-text">Premium F&B Outlets & Luxury Hospitality Services – Indulge in the finest</p>
                         </div>
                     </div>
                 </div>
@@ -673,7 +673,7 @@ Service Area
                         </div>
                         <div class="box-content">
                             <h3 class="box-title"><a href="property-details.html">Invest Opportunities</a></h3>
-                            <p class="box-text">Real estate services facilitate the easy and confident purchase, sale, and management of your properties experiencing growth.</p>
+                            <p class="box-text">Sustainable & Future-Ready Infrastructure – Combining eco-consciousness with innovation</p>
                         </div>
                     </div>
                 </div>
@@ -810,7 +810,7 @@ Property Area
                         01 </div>
                     <div class="property-card-details">
                         <span class="property-card-subtitle">Office Passage</span>
-                        <h4 class="property-card-title"><a href="#">Villa Berkel-Enschot</a></h4>
+                        <h4 class="property-card-title"><a href="#">Passage</a></h4>
                         <p class="property-card-text">Rapidiously myocardinate cross-platform intellectual capital model. Appropriately create interactive infrastructures</p>
                         <div class="property-card-price-meta">
                          
@@ -1072,8 +1072,8 @@ Video Area
                 </div>
                 <div class="video-wrap-details">
                     <div class="title-area mb-45">
-                        <h2 class="sec-title">Take a look at our modern apartment</h2>
-                        <p class="sec-text text-title">We are a real estate firm with over 20 years of expertise, and our main goal is to provide amazing locations to our partners and clients. Within the luxury real estate market, our agency offers customized solutions.</p>
+                        <h2 class="sec-title">Where Visionaries Belong</h2>
+                        <p class="sec-text text-title">Every great empire has an iconic address, and for business leaders, that address is VVIP. Designed for visionaries, top-tier entrepreneurs, and corporate giants, this ultra-premium business landmark stands as a testament to commercial excellence, influence, and affluence.</p>
                     </div>
                     <div class="btn-wrap mb-55">
                         <a href="property.html" class="th-btn style2 btn-mask th-btn-icon">Reques A Visit</a>
