changes in image and banner

--- a/index.html
+++ b/index.html
@@ -482,7 +482,7 @@ Hero Area
             >
               <div
                 class="th-hero-bg"
-                data-bg-src="assets/img/hero/banner-1.webp"
+                data-bg-src="assets/img/hero/banner-2.webp"
               ></div>
               <div class="hero-big-text">VVIP</div>
               <div class="container">
@@ -545,7 +545,7 @@ Hero Area
             >
               <div
                 class="th-hero-bg"
-                data-bg-src="assets/img/hero/banner-2.webp"
+                data-bg-src="assets/img/hero/banner-3.webp"
               ></div>
               <div class="hero-big-text">VVIP</div>
               <div class="container">
@@ -604,7 +604,7 @@ Hero Area
             >
               <div
                 class="th-hero-bg"
-                data-bg-src="assets/img/hero/banner-3.webp"
+                data-bg-src="assets/img/hero/banner-1.webp"
               ></div>
               <div class="hero-big-text">VVIP</div>
               <div class="container">
@@ -869,7 +869,7 @@ Portfolio Area
       data-overlay="title"
     >
       <div class="container">
-        <div class="project-wrap1">
+        <div class="project-wrap1" style="visibility: hidden">
           <div
             class="project-number-pagination"
             data-slider-tab="#projectSlider1"
